[gd_scene load_steps=5 format=3 uid="uid://csdocdji5hwem"]

[ext_resource type="Script" path="res://2d/source/scripts/builder/project/dungeons.gd" id="1"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://bqp0rlaj5w25g" path="res://2d/source/scenes/builder/menu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://ctknb0lymanwg" path="res://2d/source/scenes/builder/status_bar.tscn" id="4"]

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource("1")

[node name="HeaderMenu" parent="." instance=ExtResource("3")]

[node name="Container" type="ScrollContainer" parent="."]
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 576.0
mouse_filter = 2
theme = ExtResource("2")

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "  Dungeon number."
horizontal_alignment = 2

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="SpinboxDungeonNumber" type="SpinBox" parent="Container/Grid/Grid2"]
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 1.0

[node name="Label1" type="Label" parent="Container/Grid/Grid2"]
layout_mode = 2
mouse_filter = 1
text = "Changing the value here will change everything below this option."

[node name="LabelDungeonEnabled" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = " Dungeon Enabled?"
horizontal_alignment = 2

[node name="Grid3" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="DungeonEnabled" type="CheckButton" parent="Container/Grid/Grid3"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")

[node name="Label" type="Label" parent="Container/Grid/Grid3"]
layout_mode = 2
mouse_filter = 1
text = "Is this dungeon enabled?  Off: Is disabled. On: Is enabled."

[node name="StatusBar" parent="." instance=ExtResource("4")]

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="focus_exited" from="Container/Grid/Grid2/SpinboxDungeonNumber" to="." method="_on_spinbox_dungeon_number_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/Grid2/SpinboxDungeonNumber" to="." method="_on_spinbox_dungeon_number_mouse_exited"]
[connection signal="value_changed" from="Container/Grid/Grid2/SpinboxDungeonNumber" to="." method="_on_spinbox_dungeon_number_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid3/DungeonEnabled" to="." method="_on_DungeonEnabled_toggled"]
